--- a/Portfolio/03 - EtanMF - article project/server/package.json
+++ b/Portfolio/03 - EtanMF - article project/server/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jwt-simple": "^0.5.6",
-    "mongoose": "^6.3.5"
+    "mongoose": "^6.3.5",
+    "nodemon": "^2.0.20"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
